@@ -17,7 +17,7 @@ multi submethod TWEAK(LibXML::Node :doc($owner), Str() :$content!) {
 
 method native { callsame() // xmlTextNode }
 
-method content is rw is also<text> handles<substr substr-rw> { $.native.content };
+method content is rw is also<text ast> handles<substr substr-rw> { $.native.content };
 
 =begin pod
 =head1 NAME
